# Mirage

./: .gitignore  ABSTRACT.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  MIRAGE_90_DAY_PLAN.md  Makefile  PROBLEM_STATEMENT.md  PROJECT_NOTES.md  README.md  SECURITY.md  docker-compose.yml  mocks.yaml  pnpm-lock.yaml  policies.yaml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: __init__.py  baseline_runner.py  run_benchmark.py
benchmarks/scenarios/: cost_runaway_scenario.yaml  pii_leak_scenario.yaml  prompt_injection_scenario.yaml
cloud/: README.md  package.json  tsconfig.json
cloud/app/: layout.tsx  page.tsx
cloud/app/audit-log/: page.tsx
demo_ui/: index.html  server.py
docs/: CI_INTEGRATION.md  FIRST_INTEGRATION.md  GITHUB_REPO_SETUP.md  INTEGRATIONS_DATABASE.md  INTEGRATIONS_LANGCHAIN.md  INTEGRATIONS_OPENAI_AGENTS_SDK.md  INTEGRATION_PATTERNS.md  MIRAGE_PRODUCT_SPEC.md  OPEN_SOURCE_FAQ.md  README.md  TECHNICAL_DESIGN_PARTNER_OUTREACH.md  live-demo-script.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.2.0.md
docs/worklog/: 2026-03-26-phase-2-detailed-review.md  2026-03-26-phase-2-foundation.md  2026-03-27-demo-ui-alignment.md  2026-03-27-live-demo-mode-and-script.md  2026-03-27-procurement-harness-onboarding.md  2026-03-27-session-close-update.md  2026-03-28-action-review-console.md  2026-03-29-mvp-ui-redesign.md  2026-03-29-run-graph-drilldown.md  2026-04-16-frontend-review-workflow-polish.md  2026-04-16-next-milestone-product-docs.md  2026-04-17-private-alpha-readiness.md  INDEX.md  TEMPLATE.md
examples/: __init__.py  audit_log.json  rogue_agent.py  safe_agent.py  unmatched_route.py
examples/policies/: README.md  cost_guard.yaml  outbound_allowlist.yaml  output_length_cap.yaml  pii_redaction.yaml  prompt_injection.yaml
examples/procurement_harness/: README.md  __init__.py  agent.py  demo.py  mocks.yaml  policies.yaml  scenarios.py
mirage/: __init__.py  cli.py  config.py  engine.py  gateway.py  httpx_client.py  metrics.py  policy.py  proxy.py  pytest_plugin.py  runtime_paths.py  sequence.py  trace.py
mirage/defaults/: mocks.yaml  policies.yaml
mirage/integrations/: __init__.py  langchain.py  openai_agents.py
scripts/: new_worklog.py
src/: __init__.py  cli.py  config.py  engine.py  httpx_client.py  logger.py  metrics.py  proxy.py  pytest_plugin.py  runtime_paths.py  state.py  trace.py
tests/: conftest.py  test_agent_safety.py  test_benchmarks.py  test_cli.py  test_config_errors.py  test_demo_ui.py  test_example_policies.py  test_gateway.py  test_httpx_client.py  test_integration_langchain.py  test_integration_openai_agents.py  test_metrics.py  test_path_patterns.py  test_policy_operators.py  test_procurement_harness.py  test_proxy_routes.py  test_public_api.py  test_pytest_plugin.py  test_sequence.py  test_trace_store.py
ui/: .env.example  README.md  components.json  next.config.ts  package.json  playwright.config.ts  vitest.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: console-app.tsx  containment-dashboard.tsx  gateway-feed.tsx  run-detail.tsx
ui/lib/: adapters.ts  api.ts  dialog.ts  motion.ts  shortcuts.ts
ui/types/: console.ts
(+29 files in other folders)
