[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirage-ci"
version = "0.1.0"
description = "CI for agent side effects."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Yosef Shammout", email = "YosefShammout123@gmail.com" },
]
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "uvicorn>=0.29",
]
keywords = [
  "agent-safety",
  "ci",
  "fastapi",
  "httpx",
  "llm",
  "policy",
  "testing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: FastAPI",
  "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/ysham123/Mirage"
Repository = "https://github.com/ysham123/Mirage"
Issues = "https://github.com/ysham123/Mirage/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
mirage = "mirage.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src", "src.*", "mirage", "mirage.*"]

[tool.setuptools.package-data]
src = ["defaults/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
